creating a form in html to collect the data for password criteria

--- a/index.html
+++ b/index.html
@@ -41,6 +41,40 @@
 
     </div>
 
+    <div class="popup">
+      <form class="form" id="myForm">
+        <p>How many characters should your password have?</p>
+        <label for="p-length">Choose a value between 8 and 128!</label><br>
+        <input type="text" id="p-length" name="p-length"><br>
+
+        <p>Do you want capital letters?</p>
+        <input type="radio" id="cap" name="capital" value="yes">
+        <label for="yes">Yes</label><br>
+        <input type="radio" id="nocap" name="capital" value="no">
+        <label for="no">No</label><br>
+
+        <p>Do you want lowercase letters?</p>
+        <input type="radio" id="little" name="uncapital" value="yes">
+        <label for="yes">Yes</label><br>
+        <input type="radio" id="nolittle" name="uncapital" value="no">
+        <label for="no">No</label><br>
+
+        <p>Do you want numbers?</p>
+        <input type="radio" id="yesnumb" name="numbers" value="yes">
+        <label for="yes">Yes</label><br>
+        <input type="radio" id="nonumb" name="numbers" value="no">
+        <label for="no">No</label><br>
+
+        <p>Do you want special characters?</p>
+        <input type="radio" id="yesspec" name="special" value="yes">
+        <label for="yes">Yes</label><br>
+        <input type="radio" id="nospec" name="special" value="no">
+        <label for="no">No</label><br>
+
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+
     <script src="script.js"></script>
 
   </body>
