adding onto my java, so that the data from the form will collect in the console log

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
         <input type="text" id="p-length" name="p-length"><br>
 
         <p>Do you want capital letters?</p>
-        <input type="radio" id="cap" name="capital" value="yes">
+        <input type="radio" id="cap" name="capital" value="true">
         <label for="yes">Yes</label><br>
-        <input type="radio" id="nocap" name="capital" value="no">
+        <input type="radio" id="nocap" name="capital" value="false">
         <label for="no">No</label><br>
 
         <p>Do you want lowercase letters?</p>
-        <input type="radio" id="little" name="uncapital" value="yes">
+        <input type="radio" id="little" name="uncapital" value="true">
         <label for="yes">Yes</label><br>
-        <input type="radio" id="nolittle" name="uncapital" value="no">
+        <input type="radio" id="nolittle" name="uncapital" value="false">
         <label for="no">No</label><br>
 
         <p>Do you want numbers?</p>
-        <input type="radio" id="yesnumb" name="numbers" value="yes">
+        <input type="radio" id="numb" name="numbers" value="true">
         <label for="yes">Yes</label><br>
-        <input type="radio" id="nonumb" name="numbers" value="no">
+        <input type="radio" id="nonumb" name="numbers" value="false">
         <label for="no">No</label><br>
 
         <p>Do you want special characters?</p>
-        <input type="radio" id="yesspec" name="special" value="yes">
+        <input type="radio" id="spec" name="special" value="true">
         <label for="yes">Yes</label><br>
-        <input type="radio" id="nospec" name="special" value="no">
+        <input type="radio" id="nospec" name="special" value="false">
         <label for="no">No</label><br>
 
         <input type="submit" value="Submit">
