--- a/index.html
+++ b/index.html
@@ -1,81 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta http-equiv='X-UA-Compatible' content='ie=edge' />
+    <title>Rude Password Generator</title>
+    <link rel='stylesheet' href='style.css' />
   </head>
 
   <body>
-
-    <div class="wrapper">
+    <div class='wrapper'>
 
       <header>
-        <h1>Password Generator</h1>
+        <h1>Rude Password Generator</h1>
       </header>
 
-      <div class="card">
+      <div class='card'>
 
-        <div class="card-header">
+        <div class='card-header'>
           <h2>Generate a Password</h2>
         </div>
 
-        <div class="card-body">
+        <div class='card-body'>
 
           <textarea
             readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
+            id='password'
+            placeholder='Your Stupid Password'
+            aria-label='Generated Password'
           ></textarea>
 
         </div>
 
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+        <div class='card-footer'>
+          <button id='generate' class='btn'>Generate Password</button>
         </div>
 
       </div>
-
     </div>
 
-    <div class="popup">
-      <form class="form" id="myForm">
-        <p>How many characters should your password have?</p>
-        <label for="p-length">Choose a value between 8 and 128!</label><br>
-        <input type="text" id="p-length" name="p-length"><br>
-
-        <p>Do you want capital letters?</p>
-        <input type="radio" id="cap" name="capital" value="true">
-        <label for="yes">Yes</label><br>
-        <input type="radio" id="nocap" name="capital" value="false">
-        <label for="no">No</label><br>
-
-        <p>Do you want lowercase letters?</p>
-        <input type="radio" id="little" name="uncapital" value="true">
-        <label for="yes">Yes</label><br>
-        <input type="radio" id="nolittle" name="uncapital" value="false">
-        <label for="no">No</label><br>
-
-        <p>Do you want numbers?</p>
-        <input type="radio" id="numb" name="numbers" value="true">
-        <label for="yes">Yes</label><br>
-        <input type="radio" id="nonumb" name="numbers" value="false">
-        <label for="no">No</label><br>
-
-        <p>Do you want special characters?</p>
-        <input type="radio" id="spec" name="special" value="true">
-        <label for="yes">Yes</label><br>
-        <input type="radio" id="nospec" name="special" value="false">
-        <label for="no">No</label><br>
-
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-
-    <script src="script.js"></script>
+    <script src='script.js'></script>
 
   </body>
 </html>
