--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class='wrapper'>
 
       <header>
-        <h1>Rude Password Generator</h1>
+        <h1>RUDE PASSWORD GENERATOR</h1>
       </header>
 
       <div class='card'>
