finishing up. Making everything neat and aligned in CSS & making the prompts more rude to go along with the theme.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class='card'>
 
         <div class='card-header'>
-          <h2>Generate a Password</h2>
+          <h2>YOUR STUPID PASSWORD HERE</h2>
         </div>
 
         <div class='card-body'>
@@ -26,7 +26,7 @@
           <textarea
             readonly
             id='password'
-            placeholder='Your Stupid Password'
+            placeholder='blah blah blah'
             aria-label='Generated Password'
           ></textarea>
 
