--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class='card-footer'>
-          <button id='generate' class='btn'>Generate Password</button>
+          <button id='generate' class='btn'>GENERATE PASSWORD</button>
         </div>
 
       </div>
